...
                            <constraint firstItem="sb7-O4-DDf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="sQh-Gp-XdJ"/>
                            <constraint firstItem="ZMp-ST-Quv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tKX-V4-DKl"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ych-39-bqc" secondAttribute="bottom" constant="16" id="uGt-SC-Ghj"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Online Search" id="PMA-Bc-aKP">
                        <barButtonItem key="backBarButtonItem" title=" " id="Wez-cc-1ic"/>
                    </navigationItem>
                    <connections>
                        <outlet property="countriesCountLabel" destination="6Iy-a0-cCb" id="7WG-5x-xfD"/>
                        <outlet property="countriesTableView" destination="ych-39-bqc" id="b9u-Cm-Ld2"/>
                        <outlet property="noRecordsFoundLabel" destination="ZMp-ST-Quv" id="VC4-TX-5JH"/>
...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z47-iX-Paq">
                                <rect key="frame" x="0.0" y="64" width="414" height="200"/>
                                <subviews>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dye-Zs-muQ">
                                        <rect key="frame" x="18" y="12" width="378" height="176"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Flag Image"/>
                                    </imageView>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="dye-Zs-muQ" secondAttribute="trailing" constant="18" id="7Ob-qo-IvT"/>
                                    <constraint firstItem="dye-Zs-muQ" firstAttribute="leading" secondItem="Z47-iX-Paq" secondAttribute="leading" constant="18" id="IVo-RZ-lTX"/>
...
                            <constraint firstItem="HYw-VG-AB4" firstAttribute="trailing" secondItem="Z47-iX-Paq" secondAttribute="trailing" id="m5k-7Z-7PC"/>
                            <constraint firstItem="Dkh-OL-HVt" firstAttribute="top" secondItem="Z47-iX-Paq" secondAttribute="bottom" constant="16" id="n3h-KU-oip"/>
                            <constraint firstItem="Dkh-OL-HVt" firstAttribute="leading" secondItem="HYw-VG-AB4" secondAttribute="leading" constant="16" id="wIP-8F-X4Q"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="HYw-VG-AB4"/>
                    </view>
                    <navigationItem key="navigationItem" title="Country Details" id="Yqa-vl-v17">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="vUO-bd-AuH">
                            <connections>
                                <action selector="handleSave" destination="Zfv-K7-AFK" id="kYO-WN-QwK"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
