...
    /// - Parameter message: Message that needs to be shown on alert.
    func showMessage(title: String, message : String)
    {
        let alertController = UIAlertController(title: title, message: message, preferredStyle: .alert)
        
        
        let OKAction = UIAlertAction(title: "OK", style: .cancel) {
            (action: UIAlertAction) in
        }
        
        alertController.addAction(OKAction)
        
        self.present(alertController, animated: true, completion: nil)
...
