...
    // MARK:- Private Methods -
    
    /// This method sets up the initial values for view when loaded.
    func initializeView() {
        
        //UI related stuff here
        self.searchController = self.addSearchController(tintColor: UIColor.white, textColor: UIColor.white, placeHolderText: "Type country name here...")
        
        self.countriesTableView.rowHeight = UITableView.automaticDimension
        self.countriesTableView.estimatedRowHeight = UI_USER_INTERFACE_IDIOM() == UIUserInterfaceIdiom.pad ? 80 : 60
        
        self.listenToNetworkUpdates()
    }
...
